<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_task_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/white"
                android:src="@drawable/back_blk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_num_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="Completed"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/projectName"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/Deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Deadline: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/projectDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projectDeadline"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ProjectImage1"
                android:layout_width="29dp"
                android:layout_height="31dp"
                android:layout_marginStart="130dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/completed_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/Manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Project Manager: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/projectManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projectManager"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Project Status: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/projectStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projectStatus"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Project Description: "
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/projectDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:text="projectDescription" />
        </LinearLayout>

        <EditText
            android:id="@+id/filterSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="Enter to filter"
            android:hint="Enter to filter"
            android:backgroundTint="@color/purple_500"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:paddingStart="10dp"
            tools:listitem="@layout/task_list" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>